src/objects/OrderApi__Payment_Method__c.object
<CustomObject>
    <description>Credit Card and E-Check tokens stored for accounts and contacts.</description>
    <fields>
        <fullName>OrderApi__API_Response__c</fullName>
        <description>**System Calculated** API Response from the callout to create/cancel a payment method.</description>
        <inlineHelpText>**System Calculated** API Response from the callout to create/cancel a payment method.</inlineHelpText>
        <label>API Response</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OrderApi__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>**System Calculated/Override** Link to the Billing Account for the Payment Method if Entity = &quot;Account&quot; otherwise the Billing Contact&apos;s Parent Account will be linked to the Payment Method.</description>
        <inlineHelpText>**System Calculated/Override** Link to the Billing Account for the Payment Method if Entity = &quot;Account&quot; otherwise the Billing Contact&apos;s Parent Account will be linked to the Payment Method.</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Payment Methods</relationshipLabel>
        <relationshipName>Payment_Methods</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Bank_Account_Holder_Type__c</fullName>
        <description>Bank account holder type for the echeck or direct debit payment method (when supported by your payment gateway).</description>
        <inlineHelpText>Bank account holder type for the echeck or direct debit payment method (when supported by your payment gateway).</inlineHelpText>
        <label>Bank Account Holder Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderApi__Bank_Account_Type__c</fullName>
        <description>The bank account type for echeck or direct debit payments (when supported by your payment gateway).</description>
        <inlineHelpText>The bank account type for echeck or direct debit payments (when supported by your payment gateway).</inlineHelpText>
        <label>Bank Account Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderApi__Bank_Name__c</fullName>
        <description>The bank name for echeck or direct debit payments (when supported by your payment gateway).</description>
        <inlineHelpText>The bank name for echeck or direct debit payments (when supported by your payment gateway).</inlineHelpText>
        <label>Bank Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderApi__Bank_Routing_Number__c</fullName>
        <description>The bank account routing number for echeck or direct debit payments (when supported by your payment gateway).</description>
        <inlineHelpText>The bank account routing number for echeck or direct debit payments (when supported by your payment gateway).</inlineHelpText>
        <label>Bank Routing Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderApi__Billing_City__c</fullName>
        <description>Billing City for the customer&apos;s Payment Method.</description>
        <inlineHelpText>Billing City for the customer&apos;s Payment Method.</inlineHelpText>
        <label>Billing City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderApi__Billing_Country__c</fullName>
        <description>Billing Country for the customer&apos;s Payment Method.</description>
        <inlineHelpText>Billing Country for the customer&apos;s Payment Method.</inlineHelpText>
        <label>Billing Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderApi__Billing_Postal_Code__c</fullName>
        <description>Billing Postal Code for the customer&apos;s Payment Method.</description>
        <inlineHelpText>Billing Postal Code for the customer&apos;s Payment Method.</inlineHelpText>
        <label>Billing Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderApi__Billing_State__c</fullName>
        <description>Billing State for the customer&apos;s Payment Method.</description>
        <inlineHelpText>Billing State for the customer&apos;s Payment Method.</inlineHelpText>
        <label>Billing State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderApi__Billing_Street__c</fullName>
        <description>Billing Street for the customer&apos;s Payment Method.</description>
        <inlineHelpText>Billing Street for the customer&apos;s Payment Method.</inlineHelpText>
        <label>Billing Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderApi__Card_Type__c</fullName>
        <description>**System API Calculated** Visa, MasterCard, American Express, etc...</description>
        <inlineHelpText>**System API Calculated** Visa, MasterCard, American Express, etc...</inlineHelpText>
        <label>Card Type</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderApi__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>**System Calculated/Override** Link to the Billing Contact for the Payment Method.</description>
        <inlineHelpText>**System Calculated/Override** Link to the Billing Contact for the Payment Method.</inlineHelpText>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Payment Methods</relationshipLabel>
        <relationshipName>Payment_Methods</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Custom_Payment_Method__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>**System Calculated** Link to the custom payment method associated with this payment method</description>
        <inlineHelpText>**System Calculated** Link to the custom payment method associated with this payment method</inlineHelpText>
        <label>Custom Payment Method</label>
        <referenceTo>OrderApi__Payment_Method__c</referenceTo>
        <relationshipLabel>Custom Payment Method</relationshipLabel>
        <relationshipName>Custom_Payment_Method</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Custom_Payment_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>**System Calculated** Link to the custom payment associated with this payment method</description>
        <inlineHelpText>**System Calculated** Link to the custom payment associated with this payment method</inlineHelpText>
        <label>Custom Payment Type</label>
        <referenceTo>OrderApi__Custom_Payment_Type__c</referenceTo>
        <relationshipLabel>Custom Payment Type</relationshipLabel>
        <relationshipName>Custom_Payment_Type</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Customer_ID__c</fullName>
        <description>** System Calculated ** The Salesforce Record ID of the Contact or Account linked to the Payment Method.</description>
        <formula>IF(ISPICKVAL(OrderApi__Entity__c,&quot;Contact&quot;),OrderApi__Contact__c,OrderApi__Account__c)</formula>
        <inlineHelpText>** System Calculated ** The Salesforce Record ID of the Contact or Account linked to the Payment Method.</inlineHelpText>
        <label>Customer ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderApi__Customer__c</fullName>
        <description>**System Calculated** Link to the customer&apos;s record, controlled by the &quot;Entity&quot; field.</description>
        <formula>IF(ISPICKVAL(OrderApi__Entity__c,&quot;Account&quot;),HYPERLINK(&quot;/&quot; &amp; OrderApi__Account__r.Id, OrderApi__Account__r.Name), HYPERLINK(&quot;/&quot; &amp; OrderApi__Contact__r.Id, OrderApi__Contact__r.FirstName &amp; &quot; &quot; &amp; OrderApi__Contact__r.LastName))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>**System Calculated** Link to the customer&apos;s record, controlled by the &quot;Entity&quot; field.</inlineHelpText>
        <label>Customer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderApi__Description__c</fullName>
        <description>**System Calculated** The description of the customer payment method.</description>
        <formula>IF(ISBLANK( OrderApi__Number__c ),&quot;&quot;,&quot;- &quot;&amp;RIGHT(OrderApi__Number__c,7) )&amp;

            IF(ISBLANK( OrderApi__Card_Type__c ),&quot;&quot;,&quot; ...&quot; &amp; OrderApi__Card_Type__c)&amp;

            IF(OR(ISBLANK( OrderApi__Month__c ),ISBLANK( OrderApi__Year__c )), &quot;&quot;, &quot; (&quot; &amp; TEXT(OrderApi__Month__c) &amp; &quot;/&quot; &amp; TEXT(OrderApi__Year__c) &amp; &quot;)&quot;)</formula>
        <inlineHelpText>**System Calculated** The description of the customer payment method.</inlineHelpText>
        <label>Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderApi__Eligible_for_Card_Updater__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, the payment method is available for the Card on File Updater service where Fonteva will update any expired or changed cards in your ePayment vault so that any future transactions are processed uninterrupted.</description>
        <inlineHelpText>When checked, the payment method is available for the Card on File Updater service where Fonteva will update any expired or changed cards in your ePayment vault so that any future transactions are processed uninterrupted.</inlineHelpText>
        <label>Eligible for Card Updater</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Email__c</fullName>
        <description>**System Calculated** The email address of the customer used to transact with the api.</description>
        <inlineHelpText>**System Calculated** The email address of the customer used to transact with the api.</inlineHelpText>
        <label>Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderApi__Entity__c</fullName>
        <description>**Required** Select &quot;Account&quot; if the invoice should be billed to the related account, select &quot;Contact&quot; if the invoice should be sent to the related &quot;Contact&quot;.</description>
        <inlineHelpText>**Required** Select &quot;Account&quot; if the invoice should be billed to the related account, select &quot;Contact&quot; if the invoice should be sent to the related &quot;Contact&quot;.</inlineHelpText>
        <label>Entity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Contact</fullName>
                </value>
                <value>
                    <fullName>Account</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OrderApi__Exp_Date__c</fullName>
        <description>**System Calculated** Credit Card Expiration Date.</description>
        <formula>IF(MONTH( DATE(VALUE(TEXT(OrderApi__Year__c)),VALUE(TEXT(OrderApi__Month__c)),1) ) = 12,DATE( YEAR( DATE(VALUE(TEXT(OrderApi__Year__c)),VALUE(TEXT(OrderApi__Month__c)),1) ), 12, 31 ),DATE( YEAR( DATE(VALUE(TEXT(OrderApi__Year__c)),VALUE(TEXT(OrderApi__Month__c)),1) ), MONTH ( DATE(VALUE(TEXT(OrderApi__Year__c)),VALUE(TEXT(OrderApi__Month__c)),1) ) + 1, 1 ) - 1 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>**System Calculated** Credit Card Expiration Date.</inlineHelpText>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OrderApi__First_Six_Digits__c</fullName>
        <description>The first six (6) digits of the payment method (credit card or bank account number).</description>
        <inlineHelpText>The first six (6) digits of the payment method (credit card or bank account number).</inlineHelpText>
        <label>First Six Digits</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderApi__Full_Name__c</fullName>
        <description>**System Calculated** The full name of the customer.</description>
        <inlineHelpText>**System Calculated** The full name of the customer.</inlineHelpText>
        <label>Full Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderApi__Is_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>**System API Calculated** Checked when the Payment Method is deemed as a valid payment method by your Gateway (Payment Processor). Default checked.</description>
        <inlineHelpText>**System API Calculated** Checked when the Payment Method is deemed as a valid payment method by your Gateway (Payment Processor). Default checked.</inlineHelpText>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Is_Declined__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked when the last transaction for the Payment Method was declined by your Payment Gateway. Default unchecked.</description>
        <inlineHelpText>Checked when the last transaction for the Payment Method was declined by your Payment Gateway. Default unchecked.</inlineHelpText>
        <label>Is Declined</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Is_Expired__c</fullName>
        <defaultValue>false</defaultValue>
        <description>**System Calculated** Checked if the Payment Method Type is Credit Card and Today&apos;s Date is past the Card Expiration Date. Default unchecked.</description>
        <inlineHelpText>**System Calculated** Checked if the Payment Method Type is Credit Card and Today&apos;s Date is past the Card Expiration Date. Default unchecked.</inlineHelpText>
        <label>Is Expired</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Is_Restricted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Restircts the payment methods display to only purchased items. Default unchecked.</description>
        <inlineHelpText>Restircts the payment methods display to only purchased items. Default unchecked.</inlineHelpText>
        <label>Is Restricted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Is_Third_Party__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, payment method will not be displayed during checkout and credit card payment methods. Defaults unchecked.</description>
        <inlineHelpText>When checked, payment method will not be displayed during checkout and credit card payment methods. Defaults unchecked.</inlineHelpText>
        <label>Is Third Party</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Is_Valid__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Checked when the Payment Method is deemed valid by your Payment Gateway otherwise unchecked. Default checked.</description>
        <inlineHelpText>Checked when the Payment Method is deemed valid by your Payment Gateway otherwise unchecked. Default checked.</inlineHelpText>
        <label>Is Valid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Last_Four_Digits__c</fullName>
        <description>The last four (4) digits of the payment method (credit card or bank account number).</description>
        <inlineHelpText>The last four (4) digits of the payment method (credit card or bank account number).</inlineHelpText>
        <label>Last Four Digits</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderApi__Month__c</fullName>
        <description>**System Calculated** MM value for the Credit Card Expiration Month.</description>
        <inlineHelpText>**System Calculated** MM value for the Credit Card Expiration Month.</inlineHelpText>
        <label>Month</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OrderApi__Number__c</fullName>
        <description>**System Calculated** Masked account number displaying X for all but the last four characters which are visible. Example: XXXX-XXXX-XXXX-1234</description>
        <inlineHelpText>**System Calculated** Masked account number displaying X for all but the last four characters which are visible. Example: XXXX-XXXX-XXXX-1234</inlineHelpText>
        <label>Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderApi__Override_Edit__c</fullName>
        <description>URL field that overrides the default behavior of edit. If this filed populated, user will be redirected to provided url</description>
        <inlineHelpText>URL field that overrides the default behavior of edit. If this filed populated, user will be redirected to provided url</inlineHelpText>
        <label>Override Edit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderApi__Payment_Method_Token__c</fullName>
        <description>**System API Calculated** API Token for the Payment Method.</description>
        <inlineHelpText>**System API Calculated** API Token for the Payment Method.</inlineHelpText>
        <label>Payment Method Token</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderApi__Payment_Method_Type__c</fullName>
        <description>**System API Calculated** The type of payment method formatted for API transactions.</description>
        <inlineHelpText>**System API Calculated** The type of payment method formatted for API transactions.</inlineHelpText>
        <label>Payment Method Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderApi__Phone__c</fullName>
        <description>**System Calculated** The phone number sent to the gateway (optional/additional customer data)</description>
        <inlineHelpText>**System Calculated** The phone number sent to the gateway (optional/additional customer data)</inlineHelpText>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>OrderApi__Year__c</fullName>
        <description>**System Calculated** YYYY value for the Credit Card Expiration Year.</description>
        <inlineHelpText>**System Calculated** YYYY value for the Credit Card Expiration Year.</inlineHelpText>
        <label>Year</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Payment Method</label>
    <listViews>
        <fullName>OrderApi__All</fullName>
        <columns>NAME</columns>
        <columns>OrderApi__Customer__c</columns>
        <columns>OrderApi__Payment_Method_Type__c</columns>
        <columns>OrderApi__Card_Type__c</columns>
        <columns>OrderApi__Number__c</columns>
        <columns>OrderApi__Exp_Date__c</columns>
        <columns>OrderApi__Payment_Method_Token__c</columns>
        <columns>OrderApi__Is_Valid__c</columns>
        <columns>OrderApi__Is_Active__c</columns>
        <columns>OrderApi__Eligible_for_Card_Updater__c</columns>
        <columns>OrderApi__API_Response__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Payment Method ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payment Methods</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>